# game2048

./: .gitignore  README.md
engine/: CMakeLists.txt
engine/include/: Board.hpp  Direction.hpp  Engine.hpp  HeuristicEvaluator.hpp  IEvaluator.hpp  Move.hpp  Node.hpp  Player.hpp  State.hpp
engine/src/: Board.cpp  CMakeLists.txt  Engine.cpp  HeuristicEvaluator.cpp  Move.cpp  Node.cpp  Player.cpp  State.cpp  export.cpp  game2048.cpp
engine/test/: BoardTest.cpp  CMakeLists.txt  NodeTest.cpp  SimpleTest.hpp
